--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -66,7 +66,7 @@ body {
     background: linear-gradient(0deg,rgb(255, 255, 255) 90%, rgb(231, 231, 231));
     padding: 5vw 3vw 3vw 5vw;
     overflow: visible;
-    width: 90%;
+    width: 90vw;
     flex-direction: row;
     @include mobile-only {
       width:100%;
